# AI-Synth

./: .gitignore  CMakeLists.txt  README.md  build-local.ps1
.github/workflows/: build-vst3.yml  deploy-pages.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthVoice.cpp  SynthVoice.h
Tests/: ProcessorStressTest.cpp
docs/: index.html
scripts/: package_release.py
